...
        android:gravity="start|top"
        android:padding="8dp"

        />

    <LinearLayout
        android:id="@+id/step_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


...
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:enabled="false"
            android:text="@string/previous" />

        <Button
            android:id="@+id/button_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/next" />
    </LinearLayout>
...
