<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frame_layout_recipies_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</FrameLayout>
