<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:cardBackgroundColor="@android:color/holo_blue_bright"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/recipy_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>